<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">SwipeBack2</string>
	<string name="app_desc">Global swipe-to-return gesture</string>
	
	<!-- Per-app -->
	<string name="global">Global (Overriden by specific settings)</string>
	<string name="global_short">Global</string>
	<string name="reset">Reset</string>
	<string name="reset_confirm">Really want to reset these settings to default?</string>
	<string name="enable">Enable SwipeBack</string>
	<string name="edge">Trigger Edge</string>
	<string name="sensitivity">Sensitivity</string>
	<string name="notify_shortcut">Notification shortcut</string>
	<string name="notify_shortcut_summary">Show a notification in notification drawer to lead you directly to the SwipeBack settings page of the current app / activity. With this you can get rid of the huge app list and activity list.</string>
	<string name="experimental">Experimental</string>
	<string name="lollipop_hack">Lollipop hacks (SDK >= 21)</string>
	<string name="lollipop_hack_desc">Hacks specified for Lollipop and above. This includes optimizations for Lollipop, for example, this makes the status bar (if colored) look better while swiping.\nMay cause layout issues in some apps.\nIt is NOT recommended to enable this globally.</string>
	<string name="scroll_to_return">Scroll-to-return animation</string>
	<string name="scroll_to_return_desc">Override the system returning animation with a scroll-to-return animation the way the swipe gesture does. Might cause conflicts with some apps.</string>
	<string-array name="edge_list">
		<item>Left</item>
		<item>Right</item>
		<item>Bottom</item>
	</string-array>
	<string-array name="edge_values" translatable="false">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	
	<!-- Notification -->
	<string name="notify_title">SwipeBack settings</string>
	<string name="notify_content" formatted="false">Package name: %s\nClass name: %s</string>
	<string name="notify_summary">Click to open settings page</string>
	<string name="notify_app">App</string>
	<string name="notify_activity">Activity</string>
	
	<!-- About -->
	<string name="about">About</string>
	<string name="version">Version</string>
	<string name="made_by">Made by</string>
	<string name="made_by_desc">PaperAirplane Dev Team</string>
	<string name="maintainer">Maintainer</string>
	<string name="maintainer_desc">Peter Cai (XDA @PeterCxy)</string>
	<string name="source_code">Source Code</string>
	<string name="source_code_uri">https://github.com/PaperAirplane-Dev-Team/SwipeBack</string>
	<string name="license">Open-source License</string>
	<string name="license_desc">Obtain the open-source license of SwipeBack and the open-source libraries that is used. Huge thanks to those developers of open-source libraries. Without their great works, SwipeBack cannot be what it is today.</string>
	<string name="donation">Donate</string>
	<string name="donation_desc">PaperAirplane Dev Team is a non-profit dev team made up of mostly students. We have devoted our time to develop this module. If you like this module and feel like donating to us, swipe below to select a donation amount and open donation page.</string>
	
	<!-- Messages -->
	<string name="search">Search</string>
	<string name="plz_wait">Please wait...</string>
	<string name="ask_donate">Would you like to donate $%d to us?</string>

</resources>
