<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<SwitchPreference
		android:key="enable"
		android:title="@string/enable"
		android:defaultValue="true"/>
	
	<MultiSelectListPreference
		android:key="edge"
		android:title="@string/edge"
		android:dependency="enable"
		android:entries="@array/edge_list"
		android:entryValues="@array/edge_values"
		android:defaultValue="@array/edge_values"/>
	
	<info.papdt.swipeback.ui.preference.DiscreteSeekBarPreference
		android:key="sensitivity"
		android:title="@string/sensitivity"
		android:dependency="enable"
		app:dsbp_min="1"
		app:dsbp_max="100"
		app:dsbp_format="%d%%"/>
	
	<PreferenceCategory
		android:title="@string/experimental">
		
		<CheckBoxPreference
			android:key="lollipop_hack"
			android:title="@string/lollipop_hack"
			android:summary="@string/lollipop_hack_desc"
			android:checked="false"
			android:enabled="false"
			android:dependency="enable"/>
		
		<CheckBoxPreference
			android:key="scroll_to_return"
			android:title="@string/scroll_to_return"
			android:summary="@string/scroll_to_return_desc"
			android:checked="false"
			android:dependency="enable"/>
		
	</PreferenceCategory>
	
</PreferenceScreen>
